--- a/src/mc_control/samples/Seq/CMakeLists.txt
+++ b/src/mc_control/samples/Seq/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_controller("seq"
   "mc_seq_controller.cpp;mc_seq_steps.cpp;MCSeqPublisher.cpp"
   "mc_seq_controller.h;mc_seq_actions.h;mc_seq_steps.h;MCSeqPublisher.h;json/StanceConfig.h")
+
+if(${HRPSYS_BASE_FOUND})
+  pkg_config_use_dependency(seq hrpsys-base)
+endif()
